--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header><h1>Meal Finder</h1></header> 
             <div class="flex">
                 <form action="" class="flex" id="submit">
-                    <input type="text" id="search" placeholder="the keywords of searching">
+                    <input type="text" id="search" placeholder="Type here to search">
                     <button class="search-btn" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
@@ -27,7 +27,7 @@
                 <div id="result-heading"></div>
                 <div id="meals" class="meals"></div>
                 <div id="single-meal" ></div>
-                <footer class="footer"><h3>Curated by © Moontasir Shahriar Bijoy</h3></footer>
+                <footer class="footer"><h3>Bananas Food Corp.</h3></footer>
             
         </div>
         
