--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                 <div id="result-heading"></div>
                 <div id="meals" class="meals"></div>
                 <div id="single-meal" ></div>
-                <footer class="footer"><h3>Bananas Food Corp.</h3></footer>
-            
+                <footer class="footer"><h3>By-Bananas Food Corp.</h3></footer>
         </div>
-        
+        <button class="showmore" id="Show More">
+          <i class="fas fa-random"></i>
+      </button>        
         <script src="script.js" async defer></script>
     </body>
 </html>
