--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <footer class="footer"><h3>By-Bananas Food Corp.</h3></footer>
         </div>
         <button class="showmore" id="Show More">
+          <i class="fa-solid fa-arrows-left-right"></i>
       </button>        
         <script src="script.js" async defer></script>
     </body>
