--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="container">
-            <header><h1>Meal Finder</h1></header> 
+            <header><h1>Find Your Meal</h1></header> 
             <div class="flex">
                 <form action="" class="flex" id="submit">
                     <input type="text" id="search" placeholder="the keywords of searching">
@@ -27,7 +27,7 @@
                 <div id="result-heading"></div>
                 <div id="meals" class="meals"></div>
                 <div id="single-meal" ></div>
-                <footer class="footer"><h3>Curated by © Moontasir Shahriar Bijoy</h3></footer>
+                <footer class="footer"><h3>Curated by Bananas Food Corp</h3></footer>
             
         </div>
         
