--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header><h1>Find Your Meal</h1></header> 
             <div class="flex">
                 <form action="" class="flex" id="submit">
-                    <input type="text" id="search" placeholder="the keywords of searching">
+                    <input type="text" id="search" placeholder="Seach here">
                     <button class="search-btn" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
